test/TestSuite/Syntax/Errors/alert_name_redef.tjp
project "Test" 2011-12-08 +1m {
# MARK: error 3 alert_name_redef
  alertlevels foo "Foo" "#000",
              bar "Bar" "#111",
              foo2 "Foo" "#222",
              bar1 "Bar1" "#333"
}

